fix font size on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -181,6 +181,10 @@ section:not(#banner,#newsletter) {
     }
 }
 
+.hero-rating {
+    font-size: .75rem;
+}
+
 .hero-review {
 
     span {
